--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "rs-ui1",
-  "description": "锐速软件有限公司",
-  "version": "1.0.26",
-  "author": "renren",
-  "license": "MIT",
-  "private": false,
-  "main": "dist/index.js",
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
-  },
-  "dependencies": {
-    "user": "0.0.0",
-    "vue": "^2.5.11"
-  },
-  "files": [
-    "dist"
-  ],
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.4",
-    "postcss": "^7.0.5",
-    "postcss-bem": "^0.4.1",
-    "postcss-import": "^12.0.1",
-    "postcss-load-config": "^2.0.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-salad": "^2.0.1",
-    "postcss-url": "^8.0.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "vue-lazyload": "^1.2.6",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^2.9.1"
-  }
+    "name": "rs-ui1",
+    "description": "锐速软件有限公司",
+    "version": "1.0.27",
+    "author": "renren",
+    "license": "MIT",
+    "private": false,
+    "main": "dist/index.js",
+    "scripts": {
+        "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+        "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    },
+    "dependencies": {
+        "vue": "^2.5.11"
+    },
+    "files": [
+        "dist"
+    ],
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ],
+    "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+        "babel-preset-env": "^1.6.0",
+        "babel-preset-stage-3": "^6.24.1",
+        "cross-env": "^5.0.5",
+        "css-loader": "^0.28.7",
+        "file-loader": "^1.1.4",
+        "postcss": "^7.0.5",
+        "postcss-bem": "^0.4.1",
+        "postcss-import": "^12.0.1",
+        "postcss-load-config": "^2.0.0",
+        "postcss-loader": "^3.0.0",
+        "postcss-salad": "^2.0.1",
+        "postcss-url": "^8.0.0",
+        "style-loader": "^0.23.1",
+        "uglifyjs-webpack-plugin": "^2.0.1",
+        "vue-lazyload": "^1.2.6",
+        "vue-loader": "^13.0.5",
+        "vue-template-compiler": "^2.4.4",
+        "webpack": "^3.6.0",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^2.9.1",
+        "url-loader": "^0.5.8"
+    }
 }
