--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "rs-ui1",
     "description": "锐速软件有限公司",
-    "version": "1.0.27",
+    "version": "1.0.28",
     "author": "renren",
     "license": "MIT",
     "private": false,
@@ -38,13 +38,12 @@
         "postcss-salad": "^2.0.1",
         "postcss-url": "^8.0.0",
         "style-loader": "^0.23.1",
-        "uglifyjs-webpack-plugin": "^2.0.1",
+        "url-loader": "^0.5.8",
         "vue-lazyload": "^1.2.6",
         "vue-loader": "^13.0.5",
         "vue-template-compiler": "^2.4.4",
         "webpack": "^3.6.0",
         "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^2.9.1",
-        "url-loader": "^0.5.8"
+        "webpack-dev-server": "^2.9.1"
     }
 }
