--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "rs-ui1",
     "description": "锐速软件有限公司",
-    "version": "1.0.29",
+    "version": "1.0.28",
     "author": "renren",
     "license": "MIT",
     "private": false,
@@ -27,6 +27,7 @@
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
         "babel-preset-env": "^1.6.0",
         "babel-preset-stage-3": "^6.24.1",
+        "copy-webpack-plugin": "^4.6.0",
         "cross-env": "^5.0.5",
         "css-loader": "^0.28.7",
         "file-loader": "^1.1.4",
