--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "vue-template-compiler": "^2.4.4",
         "webpack": "^3.6.0",
         "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^2.9.1"
+        "webpack-dev-server": "^2.9.1",
+        "vue-router": "^3.0.1"
     }
 }
