--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
         "url-loader": "^0.5.8",
         "vue-lazyload": "^1.2.6",
         "vue-loader": "^13.0.5",
+        "vue-router": "^3.0.1",
         "vue-template-compiler": "^2.4.4",
         "webpack": "^3.6.0",
         "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^2.9.1",
-        "vue-router": "^3.0.1"
+        "webpack-dev-server": "^2.9.1"
     }
 }
