--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "cross-env": "^5.0.5",
         "css-loader": "^0.28.7",
         "file-loader": "^1.1.4",
+        "mint-ui": "^2.2.13",
         "postcss": "^7.0.5",
         "postcss-bem": "^0.4.1",
         "postcss-import": "^12.0.1",
