--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "rs-ui1",
     "description": "锐速软件有限公司",
-    "version": "1.0.63",
+    "version": "1.0.68",
     "author": "renren",
     "license": "MIT",
     "private": false,
@@ -11,6 +11,7 @@
         "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
     },
     "dependencies": {
+        "babel-preset-es2015": "^6.24.1",
         "vue": "^2.5.11"
     },
     "files": [
@@ -31,6 +32,7 @@
         "cross-env": "^5.0.5",
         "css-loader": "^0.28.7",
         "file-loader": "^1.1.4",
+        "lrz": "^4.9.40",
         "mint-ui": "^2.2.13",
         "postcss": "^7.0.5",
         "postcss-bem": "^0.4.1",
@@ -40,7 +42,9 @@
         "postcss-salad": "^2.0.1",
         "postcss-url": "^8.0.0",
         "style-loader": "^0.23.1",
+        "swiper": "^3.4.2",
         "url-loader": "^0.5.8",
+        "vue-awesome-swiper": "^2.6.7",
         "vue-lazyload": "^1.2.6",
         "vue-loader": "^13.0.5",
         "vue-router": "^3.0.1",
